fixed flickering before columns are set

--- a/dummies/less/styles.less
+++ b/dummies/less/styles.less
@@ -1135,8 +1135,8 @@ x:-o-prefocus, .qtip .qtip-tip{
 		
 		.editor-sidebar-content {
 		//&.opened {
-			&> header.hideable,
-			&> section {
+			//&> section,
+			&> header.hideable {
 				opacity: 1;
 			}
 		}
